--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ava"
   },
   "keywords": [
     "square",
@@ -23,5 +23,9 @@
   "dependencies": {
     "meow": "^3.7.0",
     "square-and-multiply": "^1.0.0"
+  },
+  "devDependencies": {
+    "ava": "^0.24.0",
+    "execa": "^0.9.0"
   }
 }
