--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "ava"
+    "test": "ava",
+    "lint": "eslint ."
   },
   "keywords": [
     "square",
@@ -26,6 +27,9 @@
   },
   "devDependencies": {
     "ava": "^3.14.0",
+    "eslint": "^7.20.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "execa": "^5.0.0"
   }
 }
