--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "test": "ava",
     "lint": "eslint ."
   },
+  "files": [
+    "cli.js"
+  ],
   "keywords": [
     "square",
     "and",
@@ -22,7 +25,7 @@
   "license": "MIT",
   "dependencies": {
     "meow": "^8.1.0",
-    "square-and-multiply": "^1.0.3"
+    "square-and-multiply": "^1.0.5"
   },
   "devDependencies": {
     "ava": "^3.15.0",
